--- a/tasks.html
+++ b/tasks.html
@@ -254,7 +254,7 @@
 								<div class="avatar avatar-xxl">
 									<img class="avatar-img rounded-circle" src="assets/images/avatar/09.jpg" alt="avatar">
 								</div>
-								<a href="#" class="h5 stretched-link mt-2 mb-0 d-block">حدادي عبد الرؤوف</a>
+								<a href="#" class="h5 stretched-link mt-2 mb-0 d-block">قاسي صارة</a>
 								<p class="mb-2">الإمستشار والتوجيه والإرشاد المدرسي والمهني</p>
 							</div>
 							<ul class="list-inline list-unstyled">
@@ -408,7 +408,7 @@
 					<li class="list-inline-item"> <a class="btn btn-white btn-sm shadow px-2 text-twitter" href="#"><i class="fab fa-fw fa-twitter"></i></a> </li>
 					<li class="list-inline-item"> <a class="btn btn-white btn-sm shadow px-2 text-linkedin" href="#"><i class="fab fa-fw fa-linkedin-in"></i></a> </li>
 				</ul>
-				<div class="text-white text-primary-hover mt-3">حقوق النشر 2024. تصميم <a href="#" target="_blank" class="text-reset">حدادي عبد الرؤوف</a>.</div>
+				<div class="text-white text-primary-hover mt-3">حقوق النشر 2024. تصميم <a href="#" target="_blank" class="text-reset">قاسي صارة</a>.</div>
 			</div>
 		</div>
 	</div>
