--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -600,7 +600,7 @@
 			<div class="col-lg-6 mx-auto text-center mb-5">
 				<a href="index.html"> <img class="h-50px" src="assets/images/logo-light.png" alt="logo"> </a>
 				<p class="mt-3 text-white">اكتشف معنا إمكانيات التلاميذ وساعدهم على اتخاذ خطوات ناجحة نحو مستقبلهم الأكاديمي والمهني. تحليل دقيق لنتائج الطور المتوسط وتوجيهات متخصصة لكل تلميذ.</p>
-				<div class="text-white text-primary-hover mt-3">حقوق النشر 2024. تصميم <a href="#" target="_blank" class="text-reset">حدادي عبد الرؤوف</a>.</div>
+				<div class="text-white text-primary-hover mt-3">حقوق النشر 2024. تصميم <a href="#" target="_blank" class="text-reset">قاسي صارة</a>.</div>
 			</div>
 		</div>
 	</div>
