--- a/index.html
+++ b/index.html
@@ -377,67 +377,32 @@
 						<div class="tiny-slider-inner" data-autoplay="true" data-gutter="80" data-arrow="true" data-dots="false" data-items="5" data-items-lg="3" data-items-md="2" data-items-xs="1">
 							<div>
 								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">العلوم الطبيعية</span></a>
+									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">إعلان رسمي بخصوص توقف المشروع</span></a>
 								</div>
 							</div>
 							<div>
 								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">العلوم الفزيائية</span></a>
+									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">نود إعلام المستخدمين الكرام بأن مشروع الوجيز قد تم إيقافه رسميًا</span></a>
 								</div>
 							</div>
 							<div>
 								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">رياضيات</span></a>
+									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">وقد تم تسليم المشروع بشكل كامل إلى صاحب الفكرة، الأستاذ/ة مستشارة التوجيه والارشاد المدرسي والمهني قاسي صارة</span></a>
 								</div>
 							</div>
 							<div>
 								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">ناريخ والجغرافيا</span></a>
+									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">مع كامل الملفات والمخرجات المتعلقة به</span></a>
 								</div>
 							</div>
 							<div>
 								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">اللغة العربية</span></a>
+									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">نشكر كل من تابع واهتم بالمشروع خلال فترة تطويره</span></a>
 								</div>
 							</div>
 							<div>
 								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">اللغة الفرنسية</span></a>
-								</div>
-							</div>
-							<div>
-								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">اللغة الإنجليزية</span></a>
-								</div>
-							</div>
-							<div>
-								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">التربية المدنية</span></a>
-								</div>
-							</div>
-							<div>
-								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">التربية الإسلامية</span></a>
-								</div>
-							</div>
-							<div>
-								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">التربية البدنية</span></a>
-								</div>
-							</div>
-							<div>
-								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">المعلوماتية</span></a>
-								</div>
-							</div>
-							<div>
-								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">التربية التشكيلية</span></a>
-								</div>
-							</div>
-							<div>
-								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">التربية الموسيقسة</span></a>
+									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">ونتمنى لصاحبة الفكرة كل التوفيق في استكمال المسار بالطريقة التي تراها مناسبة</span></a>
 								</div>
 							</div>
 						</div>
