--- a/index.html
+++ b/index.html
@@ -372,54 +372,16 @@
 	<div class="container">
 		<div class="ticker-wrapper-h">
 		  <div class="heading">News</div>
-		
-		  <ul class="news-ticker-h">
-		    <li><a href="">What is Lorem Ipsum?</a></li>
-		    <li><a href="">Why do we use it?</a></li>
-		    <li><a href="">Where does it come from?</a></li>
-		    <li><a href="">Where can I get some?</a></li>
-		  </ul>
+			<ul class="news-ticker-h">
+				<li><a href="">إعلان رسمي بخصوص توقف مشروع الوجيز</a></li>
+				<li><a href="">نود إعلام المستخدمين الكرام بأن مشروع الوجيز قد تم إيقافه رسميًا</a></li>
+				<li><a href="">وقد تم تسليم المشروع بشكل كامل إلى صاحب الفكرة، الأستاذ/ة مستشارة التوجيه والارشاد المدرسي والمهني قاسي صارة، مع كامل الملفات والمخرجات المتعلقة به</a></li>
+				<li><a href="">تجدر الإشارة إلى أن صاحبة الفكرة، الأستاذة قاسي صارة، تابعت المشروع منذ بدايته في سنة 2021 وحتى عام 2024، وقد كانت حريصة طوال هذه الفترة على تطويره وتحقيق أهدافه</a></li>
+				<li><a href="">وقد تم الآن تسليم المشروع بالكامل لها</a></li>
+				<li><a href="">نحن فخورون بكل ما تم إنجازه خلال الفترة الماضية، ونشكر كل من تابعنا وساندنا</a></li>
+				<li><a href="">ونتمنى لصاحبة الفكرة كل التوفيق في استكمال المسار بالطريقة التي تراها مناسبة</a></li>
+		  	</ul>
 		</div>
-		<div class="row">
-			<div class="col-md-12">
-				<div class="bg-light rounded-3 p-4">
-					<div class="tiny-slider arrow-round arrow-creative arrow-blur arrow-hover py-1">
-						<div class="tiny-slider-inner" data-autoplay="true" data-gutter="80" data-arrow="true" data-dots="false" data-items="5" data-items-lg="3" data-items-md="2" data-items-xs="1">
-							<div>
-								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">إعلان رسمي بخصوص توقف المشروع</span></a>
-								</div>
-							</div>
-							<div>
-								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">نود إعلام المستخدمين الكرام بأن مشروع الوجيز قد تم إيقافه رسميًا</span></a>
-								</div>
-							</div>
-							<div>
-								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">وقد تم تسليم المشروع بشكل كامل إلى صاحب الفكرة، الأستاذ/ة مستشارة التوجيه والارشاد المدرسي والمهني قاسي صارة</span></a>
-								</div>
-							</div>
-							<div>
-								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">مع كامل الملفات والمخرجات المتعلقة به</span></a>
-								</div>
-							</div>
-							<div>
-								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">نشكر كل من تابع واهتم بالمشروع خلال فترة تطويره</span></a>
-								</div>
-							</div>
-							<div>
-								<div class="bg-body text-center rounded-2 border py-2 px-1 position-relative">
-									<a href="#" class="text-primary-hover stretched-link"><span class="h6 ms-2">ونتمنى لصاحبة الفكرة كل التوفيق في استكمال المسار بالطريقة التي تراها مناسبة</span></a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div> 
 	</div>
 </section>
 <section class="pt-0 pt-md-5">
