--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
 	<link rel="stylesheet" type="text/css" href="assets/vendor/tiny-slider/tiny-slider.css">
   	<link rel="stylesheet" type="text/css" href="assets/vendor/aos/aos.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style-rtl.css">
+
+	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/freeps2/Ticker@main/ent-admin.css">
+	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/freeps2/Ticker@main/ent-style.css">
+	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/freeps2/Ticker@main/style.css">
+	  <script src="https://cdn.jsdelivr.net/gh/freeps2/Ticker@main/jquery-3.6.0.min.js"></script>
+	  <script src="https://cdn.jsdelivr.net/gh/freeps2/Ticker@main/jquery.easing.js"></script>
+	  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+	  <script src="https://cdn.jsdelivr.net/gh/freeps2/Ticker@main/ent-script.min.js"></script>
+	  <script src="https://cdn.jsdelivr.net/gh/freeps2/Ticker@main/ent-admin.js"></script>
+	  <script src="assets/js/script_text_Ticker.js" referrerpolicy="no-referrer"></script>
 </head>
 <body>
 
@@ -370,29 +380,7 @@
 </section>
 <section>
 	<div class="container">
-		<div class="ticker-wrapper-h">
-		  <div class="heading">News</div>
-			<div class="ticker-move">
-			<ul class="news-ticker-h">
-				<li><a href="">إعلان رسمي بخصوص توقف مشروع الوجيز</a></li>
-				<li><a href="">نود إعلام المستخدمين الكرام بأن مشروع الوجيز قد تم إيقافه رسميًا</a></li>
-				<li><a href="">وقد تم تسليم المشروع بشكل كامل إلى صاحب الفكرة، الأستاذ/ة مستشارة التوجيه والارشاد المدرسي والمهني قاسي صارة، مع كامل الملفات والمخرجات المتعلقة به</a></li>
-				<li><a href="">تجدر الإشارة إلى أن صاحبة الفكرة، الأستاذة قاسي صارة، تابعت المشروع منذ بدايته في سنة 2021 وحتى عام 2024، وقد كانت حريصة طوال هذه الفترة على تطويره وتحقيق أهدافه</a></li>
-				<li><a href="">وقد تم الآن تسليم المشروع بالكامل لها</a></li>
-				<li><a href="">نحن فخورون بكل ما تم إنجازه خلال الفترة الماضية، ونشكر كل من تابعنا وساندنا</a></li>
-				<li><a href="">ونتمنى لصاحبة الفكرة كل التوفيق في استكمال المسار بالطريقة التي تراها مناسبة</a></li>
-		  	</ul>
-			<ul class="news-ticker-h">
-				<li><a href="">إعلان رسمي بخصوص توقف مشروع الوجيز</a></li>
-				<li><a href="">نود إعلام المستخدمين الكرام بأن مشروع الوجيز قد تم إيقافه رسميًا</a></li>
-				<li><a href="">وقد تم تسليم المشروع بشكل كامل إلى صاحب الفكرة، الأستاذ/ة مستشارة التوجيه والارشاد المدرسي والمهني قاسي صارة، مع كامل الملفات والمخرجات المتعلقة به</a></li>
-				<li><a href="">تجدر الإشارة إلى أن صاحبة الفكرة، الأستاذة قاسي صارة، تابعت المشروع منذ بدايته في سنة 2021 وحتى عام 2024، وقد كانت حريصة طوال هذه الفترة على تطويره وتحقيق أهدافه</a></li>
-				<li><a href="">وقد تم الآن تسليم المشروع بالكامل لها</a></li>
-				<li><a href="">نحن فخورون بكل ما تم إنجازه خلال الفترة الماضية، ونشكر كل من تابعنا وساندنا</a></li>
-				<li><a href="">ونتمنى لصاحبة الفكرة كل التوفيق في استكمال المسار بالطريقة التي تراها مناسبة</a></li>
-		  	</ul>
-				</div>
-		</div>
+		<div id="newsTicker_theme1"></div>
 	</div>
 </section>
 <section class="pt-0 pt-md-5">
