--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 	  <script src="https://cdn.jsdelivr.net/gh/freeps2/Ticker@main/ent-script.min.js"></script>
 	  <script src="https://cdn.jsdelivr.net/gh/freeps2/Ticker@main/ent-admin.js"></script>
 	  <script src="assets/js/script_text_Ticker.js" referrerpolicy="no-referrer"></script>
+	  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 </head>
 <body>
 
